# workproba

./: .gitignore  LICENSE  LICENSE-COMMERCIAL  LICENSING.md  Makefile  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/presets/: preset.terrain.json
desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
services/ai/: .env.example  README.md  pyproject.toml  run_dev.sh  workproba_ai.spec  workproba_ai_entry.py
services/ai/app/: __init__.py  audit.py  auth.py  capabilities.py  capabilities_api.py  capabilities_profile.py  capabilities_resolve.py  capabilities_turn.py  config.py  embed_batching.py  i18n.py  limits.py  local_client.py  main.py  memory_stores.py  project_client.py  provider_set.py  schemas.py  turn_manager.py  versions.py
services/ai/evals/: README.md  __init__.py  __main__.py  answer_eval.py  config.py  judge.py  metrics.py  retrieval_eval.py  schema.py
services/ai/tests/: conftest.py  test_agent_loop.py  test_agent_remember.py  test_attachments.py  test_attachments_routing.py  test_audit.py  test_audit_correlation.py  test_audit_export.py  test_capabilities_api.py  test_capabilities_profile.py  test_capabilities_resolve.py  test_capabilities_turn.py  test_cloud_llm_errors.py  test_cloud_user_identity.py  test_compaction.py  test_confirmation_sandbox.py  test_control_plane_client.py  test_documents_preview.py  test_effect_gate.py  test_embed_batching.py  test_embedding_cache.py  test_error_event_schema.py  test_eval_live.py  test_eval_metrics.py  test_eval_schema.py  test_extractor.py  test_fallback.py  test_hardening.py  test_human_summary.py  test_i18n.py  test_live_mistral.py  (+51 more)
(+707 files in other folders)
