[package]
name = "workproba-desktop"
version = "0.1.0"
description = "Workproba desktop shell (Tauri)"
authors = ["Improba"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "workproba_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
notify = "6"
